[package]
name = "HueTVLights"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.26"
rand = "0.9.0"
reqwest = { version = "0.12.14", features = ["json"] }
resvg = "0.45.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
udp-dtls = "0.1.0"
serde_json = "1.0.140"
